# MLOps_1_hw

./: .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml
src/: evaluate.py  validate_model.py
