[project]
name = "step4-ge-validation-data"
version = "0.1.0"
description = ""
authors = [
    {name = "Angelina",email = "angelina.tiyan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2,<3.0)",
    "scikit-learn (>=1.5,<2.0)",
    "dvc (>=3.50,<4.0)",
    "great-expectations (>=0.18,<1.0)",
    "pyyaml (>=6.0,<7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)"
]
